syntax = "proto3";
package drsh.proto;

option go_package = "./internal/drsh/proto";

message Message {
  enum MessageType {
    // Sent to self
    READY = 0;
    // Sent to opposing party
    EXIT = 1;
    // Server-bound
    PING_REQUEST = 2;
    HEARTBEAT_REQUEST = 3;
    HANDSHAKE_REQUEST = 4;
    PTY_INPUT = 5;
    PTY_WINCH = 6;
    FILE_UPLOAD = 7;
    FILE_UPLOAD_FINISH = 8;
    // Client-bound
    PING_RESPONSE = 9;
    HEARTBEAT_RESPONSE = 10;
    HANDSHAKE_RESPONSE = 11;
    PTY_OUTPUT = 12;
    FILE_DOWNLOAD = 13;
    FILE_DOWNLOAD_FINISH = 14;
  }

  enum SessionMode {
    MODE_TERMINAL = 0;
    MODE_FILE_UPLOAD = 1;
    MODE_FILE_DOWNLOAD = 2;
  }

  // All messages
  MessageType type = 1;
  string sender = 2;

  // PTY messages
  bytes pty_payload = 3;
  uint64 pty_dimensions = 4;

  // Handshake messages
  bytes handshake_key = 5;
  bool handshake_success = 7;
  string handshake_session = 8;
  string handshake_user = 9;
  string handshake_motd = 10;
  SessionMode handshake_mode = 11;
  string handshake_filename = 12;

  // File messages
  bytes file_payload = 13;
}

message EncryptedMessage {
  bytes ciphertext = 1;
  bytes nonce = 2;
}
